adding prelim observations

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>US Government Greenhouse Gas Emissions</h1>
     <div class="chart-container"></div>
     <footer>
-      <a href="#">view</a> |
+      <a href="http://s2t2.github.io/gsa-hackathon-2015/">view</a> |
       <a href="https://github.com/s2t2/gsa-hackathon-2015">source</a>
     </footer>
   </div>
@@ -21,7 +21,7 @@
 
     var zz;
 
-    d3.csv("data/emissions_by_agency.csv", function(csv_data){
+    d3.csv("data/ghg/emissions_by_agency.csv", function(csv_data){
 
       console.log(csv_data)
 
