displaying static chart

--- a/emission-decisions.html
+++ b/emission-decisions.html
@@ -5,13 +5,14 @@
   <title>US Government Greenhouse Gas Emissions</title>
   <style>
     body {background-color:#fff; font:12px sans-serif;}
+    footer {margin-top:2em;}
   </style>
 </head>
 <body>
   <div id="page" class="container">
     <h1><a href="/">US Government Greenhouse Gas Emissions</a></h1>
-    <h2>Emissions Decisions</h2>
-    <div class="chart-container"></div>
+    <h2>Emission Decisions</h2>
+    <div id="chart-container"></div>
     <footer>
       <a href="http://s2t2.github.io/gsa-hackathon-2015/">view</a> |
       <a href="https://github.com/s2t2/gsa-hackathon-2015">source</a>
