--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>US Government Greenhouse Gas Emissions</title>
   <style>
     body {background-color:#fff; font:12px sans-serif;}
+    footer {margin-top:2em;}
   </style>
 </head>
 <body>
