--- a/emissions-by-agency.html
+++ b/emissions-by-agency.html
@@ -114,11 +114,6 @@
             }
           ];
 
-
-
-
-
-
           //
           // PLOT DATA
           //
@@ -152,6 +147,23 @@
               },
               series: chart_series
           }); // highcharts
+
+
+
+
+
+          $('.highcharts-xaxis-labels text').click(function(){
+            console.log($(this).text())
+          });
+
+
+
+
+
+
+
+
+
 
 
       }); // d3.json
