--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <h1><a href="/">US Government Greenhouse Gas Emissions</a></h1>
     <ul>
       <li>
-        <a href="/emissions-by-agency.html">Emissions by Agency</a>
+        <a href="/emissions.html">Emissions by Agency</a>
       </li>
       <li>
-        <a href="/emission-decisions.html">Emission Decisions</a>
+        <a href="/decisions.html">Emission Decisions</a>
       </li>
     </ul>
     <footer>
