--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 </head>
 <body>
   <div id="page" class="container">
-    <h1><a href="/">US Government Greenhouse Gas Emissions</a></h1>
+    <h1><a href="/gsa-hackathon-2015/">US Government Greenhouse Gas Emissions</a></h1>
     <ul>
       <li>
-        <a href="/emissions.html">Emissions by Agency</a>
+        <a href="/gsa-hackathon-2015/emissions.html">Emissions by Agency</a>
       </li>
       <li>
-        <a href="/decisions.html">Emission Decisions</a>
+        <a href="/gsa-hackathon-2015/decisions.html">Emission Decisions</a>
       </li>
     </ul>
     <footer>
