--- a/decisions.html
+++ b/decisions.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div id="page" class="container">
-    <h1><a href="/">US Government Greenhouse Gas Emissions</a></h1>
+    <h1><a href="/gsa-hackathon-2015/">US Government Greenhouse Gas Emissions</a></h1>
     <h2>Emission Decisions</h2>
     <select id="agency-selector">
       <option value="ARMY"	selected="true">Department of Army</option>
