--- a/emissions.html
+++ b/emissions.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div id="page" class="container">
-    <h1><a href="/">US Government Greenhouse Gas Emissions</a></h1>
+    <h1><a href="/gsa-hackathon-2015/">US Government Greenhouse Gas Emissions</a></h1>
     <h2>Emissions by Agency</h2>
     <select id="metric-selector">
       <option value="gge" selected="true">Gasoline Gallon Equivalents (gallons)</option>
