fixing axis label units to address #3

--- a/decisions.html
+++ b/decisions.html
@@ -161,7 +161,7 @@
             yAxis: {
                 min: 0,
                 title: {
-                    text: 'Greenhouse Gas Emissions (kilograms)'
+                    text: 'Gasoline Gallon Equivalents (gallons)'
                 },
                 stackLabels: {
                     enabled: true,
