testing url detection strategy

--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
       <a href="http://s2t2.github.io/gsa-hackathon-2015/">view</a> |
       <a href="https://github.com/s2t2/gsa-hackathon-2015">source</a>
     </footer>
+    <script type="text/javascript">
+      var baseUrl = "/";
+      if (window.location.hostname != "localhost") {
+        baseUrl =  "/gsa-hackathon-2015/"
+      }
+      console.log(baseUrl)
+
+    </script>
   </div>
 </body>
 </html>
