fixing link path typo #2

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <script type="text/javascript">
       window.onload = function(){
         // account for different URL paths between production and development environments
-        var repoName = "gsa-hackathon-2015";
+        var repoName = "gsa-hackathon-2015/";
         var baseUrl = "/";
         if (window.location.hostname != "localhost") {baseUrl += repoName};
         document.getElementById("home-link").href = baseUrl;
